portforward/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portforward-service
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: portforward
